ci: Add publish to ECR and deploy with Helm
- Remove Docker ecosystem from dependabot YAML as unused
- Add deploy-feature workflow triggered by feature-*/* branches
- Add release gradle plugin and its configuration per project
- Move to snapshot versioning in gradle.properties
- Use canonical uri() for URI references in settings.gradle

references: DSTEW-63

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
+plugins {
+    id 'net.researchgate.release' version '3.1.0'
+}
+
 subprojects {
     group = 'uk.gov.justice.laa.dstew.access'
+
+    release {
+        tagTemplate = '$name-$version'
+    }
 
     // Force version of Checkstyle to one without CVEs to avoid Snyk complaints.
     afterEvaluate {
